# 3d-viewer-app

./: CMakeLists.txt  Doxyfile  Makefile  ObjectDependencies.txt  README.md
app/: CMakeLists.txt  explorer.cpp  explorer.h  main.cpp  viewport.cpp  viewport.h  window.cpp  window.h  window.qrc  window.ui
kernel/: CMakeLists.txt  dataset.c  dataset.h  transform.c  transform.h  utils.c  utils.h
submodules/gif/: gif.h
tests/: 000.include  CMakeLists.txt  Makefile  dataset-wfmodel.check  main.c  operation-with-io-file.check  transformation-wfmodel.check
